Fix alignment for source code link

--- a/src/_assets/scss/style.scss
+++ b/src/_assets/scss/style.scss
@@ -278,7 +278,7 @@ a:focus {
 .td-event__city:after {
   content: ":";
 }
-.td-nav-footer {
+.td-nav-footer, .footer-source {
   text-align: center;
 }
 .td-footer {
